--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <img
                 class="lines"
                 src="./assets/img/hero/AbstractLine.svg"
-                alt="Abstrac tLine"
+                alt="Abstract Line"
               />
               <img
                 class="hero-icon"
@@ -147,7 +147,7 @@
         </div>
       </section>
 
-      <section class="about-benefits">
+      <section class="benefits">
         <div class="container">
           <div class="row">
             <div class="benefits-details">
@@ -162,8 +162,8 @@
                 <a href="#">View All</a>
               </div>
             </div>
-            <div class="benefits">
-              <div class="benefit">
+            <div class="benefit">
+              <div class="card">
                 <span>01</span>
                 <div class="benefit-info">
                   <h4>Flexible Learning Schedule</h4>
@@ -178,7 +178,7 @@
                     alt="benefit arrow"
                 /></a>
               </div>
-              <div class="benefit">
+              <div class="card">
                 <span>02</span>
                 <div class="benefit-info">
                   <h4>Expert Instruction</h4>
@@ -193,7 +193,7 @@
                     alt="benefit arrow"
                 /></a>
               </div>
-              <div class="benefit">
+              <div class="card">
                 <span>03</span>
                 <div class="benefit-info">
                   <h4>Diverse Course Offerings</h4>
@@ -208,7 +208,7 @@
                     alt="benefit arrow"
                 /></a>
               </div>
-              <div class="benefit">
+              <div class="card">
                 <span>04</span>
                 <div class="benefit-info">
                   <h4>Updated Curriculum</h4>
@@ -223,7 +223,7 @@
                     alt="benefit arrow"
                 /></a>
               </div>
-              <div class="benefit">
+              <div class="card">
                 <span>05</span>
                 <div class="benefit-info">
                   <h4>Practical Projects and Assignments</h4>
@@ -238,7 +238,7 @@
                     alt="benefit arrow"
                 /></a>
               </div>
-              <div class="benefit">
+              <div class="card">
                 <span>06</span>
                 <div class="benefit-info">
                   <h4>Interactive Learning Environment</h4>
@@ -258,7 +258,7 @@
         </div>
       </section>
 
-      <section class="about-courses">
+      <section class="courses">
         <div class="container">
           <div class="row">
             <div class="courses-details">
@@ -273,8 +273,8 @@
                 <a href="#">View All</a>
               </div>
             </div>
-            <div class="courses">
-              <div class="course">
+            <div class="course">
+              <div class="card">
                 <div class="course-image">
                   <img
                     src="./assets/img/courses/course1.png"
@@ -300,7 +300,7 @@
                   <button>Get it Now</button>
                 </div>
               </div>
-              <div class="course">
+              <div class="card">
                 <div class="course-image">
                   <img
                     src="./assets/img/courses/course2.png"
@@ -327,7 +327,7 @@
                   <button>Get it Now</button>
                 </div>
               </div>
-              <div class="course">
+              <div class="card">
                 <div class="course-image">
                   <img
                     src="./assets/img/courses/course3.png"
@@ -353,7 +353,7 @@
                   <button>Get it Now</button>
                 </div>
               </div>
-              <div class="course">
+              <div class="card">
                 <div class="course-image">
                   <img
                     src="./assets/img/courses/course4.png"
@@ -380,7 +380,7 @@
                   <button>Get it Now</button>
                 </div>
               </div>
-              <div class="course">
+              <div class="card">
                 <div class="course-image">
                   <img
                     src="./assets/img/courses/course5.png"
@@ -407,7 +407,7 @@
                   <button>Get it Now</button>
                 </div>
               </div>
-              <div class="course">
+              <div class="card">
                 <div class="course-image">
                   <img
                     src="./assets/img/courses/course6.png"
@@ -439,7 +439,7 @@
         </div>
       </section>
 
-      <section class="about-testimonials">
+      <section class="testimonials">
         <div class="container">
           <div class="row">
             <div class="testimonials-details">
@@ -454,8 +454,8 @@
                 <a href="#">View All</a>
               </div>
             </div>
-            <div class="testimonials">
-              <div class="testimonial">
+            <div class="testimonial">
+              <div class="card">
                 <div class="user-testimonial">
                   <p>
                     The web design course provided a solid foundation for me.
@@ -472,7 +472,7 @@
                   <a href="#">Read Full Story</a>
                 </div>
               </div>
-              <div class="testimonial">
+              <div class="card">
                 <div class="user-testimonial">
                   <p>
                     The UI/UX design course exceeded my expectations. The
@@ -489,7 +489,7 @@
                   <a href="#">Read Full Story</a>
                 </div>
               </div>
-              <div class="testimonial">
+              <div class="card">
                 <div class="user-testimonial">
                   <p>
                     The mobile app development course was fantastic! The
@@ -507,7 +507,7 @@
                   <a href="#">Read Full Story</a>
                 </div>
               </div>
-              <div class="testimonial">
+              <div class="card">
                 <div class="user-testimonial">
                   <p>
                     I enrolled in the graphic design course as a beginner, and
@@ -529,7 +529,7 @@
         </div>
       </section>
 
-      <section class="about-pricing">
+      <section class="pricing">
         <div class="container">
           <div class="row">
             <div class="pricing-details">
@@ -547,7 +547,7 @@
                 </div>
               </div>
             </div>
-            <div class="pricing">
+            <div class="card">
               <div class="monthly">
                 <span class="price-plan">Free Plan</span>
                 <div class="price">
